@@ -29,14 +29,22 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.postgresql:postgresql:42.7.4'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.springframework.boot:spring-boot-starter-quartz'
+    //implementation 'org.springframework.boot:spring-boot-starter-quartz'
+    implementation('org.springframework.boot:spring-boot-starter-quartz') {
+        exclude group: 'org.quartz-scheduler', module: 'quartz'
+    }
+
+    implementation 'org.quartz-scheduler:quartz:2.3.2'
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
 
 
+
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation group: 'com.openpojo', name: 'openpojo', version: '0.9.1'
 	//implementation 'org.springframework.boot:spring-boot-starter-webmvc'
 //	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
 //	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
@@ -46,6 +54,8 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+    // allow reflection into java.time for OpenPojo
+    jvmArgs '--add-opens', 'java.base/java.time=ALL-UNNAMED'
 }
 
 jacocoTestReport {
